--- a/CatiraX/templates/login.html
+++ b/CatiraX/templates/login.html
@@ -15,18 +15,17 @@
             <form id="formLogin" novalidate>
                 <div class="input-group">
                     <label>Email</label>
-                    <input type="email" placeholder="seu@email.com" required />
+                    <input type="email" id="email" placeholder="seu@email.com" required />
                 </div>
                 <div class="input-group">
                     <label>Senha</label>
-                    <input type="password" placeholder="Senha" required />
+                    <input type="password" id="senha" placeholder="Senha" required />
                 </div>
                 <button type="submit" class="btn-auth">Entrar</button>
             </form>
 
             <a href="recover.html">Esqueci a senha</a><br />
             <a href="register.html">Criar nova conta</a><br />
-            <a href="index.html">← Voltar para Home</a>
         </div>
     </div>
     <script src="../static/js/login.js"></script>
