--- a/CatiraX/templates/register.html
+++ b/CatiraX/templates/register.html
@@ -22,7 +22,7 @@
 
                 <div class="input-group">
                     <label>CPF</label>
-                    <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00" required maxlength="14">
+                    <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00" required maxlength="20">
                 </div>
 
                 <div class="input-group">
@@ -33,7 +33,7 @@
                 <div class="input-group">
                     <label>Senha</label>
                     <div class="input-container">
-                        <input type="password" id="senha" name="senha" placeholder="Mínimo 8 caracteres e 1 maiúscula" required>
+                        <input type="password" id="senha" name="senha" placeholder="Mín. 8 caracteres e 1 maiúscula" required>
                         <span class="toggle-password" onclick="toggleSenha('senha')">👁️</span>
                     </div>
                 </div>
@@ -56,6 +56,7 @@
 
         </div>
     </div>
+
 
     <script src="../static/js/register.js"></script>
 </body>
